<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/bg">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:src="@mipmap/btn_back_normal" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="56dp"
            android:text="@string/players"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.100684" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/transparent_box"
        android:orientation="vertical"
        android:paddingLeft="17dp"
        android:paddingTop="11.5dp"
        android:paddingRight="17dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/et_palyer1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:cursorVisible="true"
            android:hint="@string/hint_player1"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHint="#B1A0A0"
            android:theme="@style/MyEditText" />

        <TextView
            android:id="@+id/tv_palyer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/player2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/et_palyer2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:cursorVisible="true"
            android:hint="@string/hint_player2"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHint="#B1A0A0"
            android:theme="@style/MyEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/select_chessman"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <RadioGroup
            android:layout_width="266dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <ImageView
                android:layout_width="69.5dp"
                android:layout_height="69.5dp"
                android:src="@mipmap/btn_normal" />

            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />

            <ImageView
                android:layout_width="58.5dp"
                android:layout_height="58.5dp"
                android:src="@mipmap/btn_select" />
        </RadioGroup>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.700684" />

    <ImageView
        android:id="@+id/img_continue"
        android:layout_width="199dp"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/btn_continue_normal_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


</androidx.constraintlayout.widget.ConstraintLayout>






